--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chroma-js": "2.4.2",
     "flatpickr": "4.6.13",
     "prop-types": "15.8.1",
+    "qrcode": "^1.5.4",
     "react": "18.2.0",
     "react-copy-to-clipboard": "5.1.0",
     "react-countup": "6.4.2",
