--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.0",
     "@mui/styled-engine": "5.12.0",
+    "@neondatabase/serverless": "^1.0.1",
+    "@sendgrid/mail": "^8.1.5",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "chroma-js": "2.4.2",
+    "dotenv": "^17.2.1",
     "flatpickr": "4.6.13",
     "prop-types": "15.8.1",
     "qrcode": "^1.5.4",
